RESOLVED FIXED139695
[iOS] WTF fails to build with public SDK due to missing header CPAggregateDictionary.h
https://bugs.webkit.org/show_bug.cgi?id=139695
Summary [iOS] WTF fails to build with public SDK due to missing header CPAggregateDic...
Daniel Bates
Reported 2014-12-16 12:34:49 PST
Following the patch for bug #139652, WTF failed to build with the public iOS SDK since the patch depends on the existence of header AppSupport/CPAggregateDictionary.h, which does not exist in the public iOS SDK. We should create a SPI wrapper header for CPAggregateDictionary.h that includes AppSupport/CPAggregateDictionary.h and forward declares the applicable SPI functions when building with the Apple Internal SDK and public iOS SDK, respectively.
Attachments
Patch (6.97 KB, patch)
2014-12-16 12:38 PST, Daniel Bates
no flags
Patch (1.19 KB, patch)
2014-12-16 13:26 PST, Daniel Bates
no flags
Patch (1.76 KB, patch)
2014-12-16 13:41 PST, Daniel Bates
no flags
Daniel Bates
Comment 1 2014-12-16 12:38:19 PST
Chris Dumez
Comment 2 2014-12-16 13:14:17 PST
Comment on attachment 243377 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243377&action=review > Source/WTF/wtf/ios/FeatureCounter.mm:29 > #if PLATFORM(IOS) Why cannot we just and "&& USE(APPLE_INTERNAL_SDK)" here?
Daniel Bates
Comment 3 2014-12-16 13:22:47 PST
(In reply to comment #2) > Comment on attachment 243377 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=243377&action=review > > > Source/WTF/wtf/ios/FeatureCounter.mm:29 > > #if PLATFORM(IOS) > > Why cannot we just and "&& USE(APPLE_INTERNAL_SDK)" here? We can. I assumed we wanted to count features in WebKit built with the public SDK.
Chris Dumez
Comment 4 2014-12-16 13:24:15 PST
Comment on attachment 243377 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243377&action=review >>> Source/WTF/wtf/ios/FeatureCounter.mm:29 >>> #if PLATFORM(IOS) >> >> Why cannot we just and "&& USE(APPLE_INTERNAL_SDK)" here? > > We can. I assumed we wanted to count features in WebKit built with the public SDK. I don't believe we want to do feature counting for anything else than Safari / MobileSafari at the moment.
Daniel Bates
Comment 5 2014-12-16 13:26:35 PST
Daniel Bates
Comment 6 2014-12-16 13:27:50 PST
Comment on attachment 243384 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243384&action=review > Source/WTF/ChangeLog:9 > + as we only interested in counting features in builds of iOS WebKit that were built we only => we are only
Chris Dumez
Comment 7 2014-12-16 13:28:12 PST
Comment on attachment 243384 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243384&action=review > Source/WTF/wtf/ios/FeatureCounter.mm:29 > +#if PLATFORM(IOS) && USE(APPLE_INTERNAL_SDK) The #endif comment should be updated. We should also update the #if check in FeatureCounter.cpp otherwise we are going to get linking errors with the public SDK on iOS
Daniel Bates
Comment 8 2014-12-16 13:41:46 PST
Chris Dumez
Comment 9 2014-12-16 13:44:00 PST
Comment on attachment 243387 [details] Patch r=me, thanks.
Daniel Bates
Comment 10 2014-12-16 13:46:49 PST
Comment on attachment 243387 [details] Patch Clearing flags on attachment: 243387 Committed r177394: <http://trac.webkit.org/changeset/177394>
Daniel Bates
Comment 11 2014-12-16 13:46:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.