[iOS] WTF fails to build with public SDK due to missing header CPAggregateDictionary.h https://bugs.webkit.org/show_bug.cgi?id=139695

Reviewed by Chris Dumez.

Add USE(APPLE_INTERNAL_SDK)-guard around iOS-specific feature counter implementation
as we are only interested in counting features in builds of iOS WebKit that were built
with the Apple Internal SDK.

* wtf/FeatureCounter.cpp:
* wtf/ios/FeatureCounter.mm:


Canonical link: https://commits.webkit.org/157596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177394 268f45cc-cd09-0410-ab3c-d52691b4dbfc